--- a/Html/servicios.html
+++ b/Html/servicios.html
@@ -67,7 +67,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 ">
             <div class="col ">
                 <div class="card card border-light mb-3 ">
-                    <img src=" " class="card-img-top " alt="... ">
+                    <img src="/Img/diseno-de-sonrisa.jpg " class="card-img-top " alt="... ">
                     <div class="card-body ">
                         <h5 class="card-title ">DISEÑO DE SONRISA</h5>
                         <p class="card-text ">“Limpiar, blanquear dientes y mejorar forma, altura de encías” El Diseño de Sonrisa cuenta con una suma de procedimientos y trabajo interdisciplinario que nos permitirán lograr una simetría de balance, funcionalidad y armonía para
@@ -80,7 +80,7 @@
             </div>
             <div class="col ">
                 <div class="card card border-light mb-3 ">
-                    <img src=" " class="card-img-top " alt="... ">
+                    <img src="/Img/implantes-dentales.jpg " class="card-img-top " alt="... " height="230">
                     <div class="card-body ">
                         <h5 class="card-title ">IMPLANTES</h5>
                         <p class="card-text ">“El arte de Reemplazar un diente perdido” Los implantes están hechos de aleaciones de titanio (específicamente titanio, aluminio, vanadio) con diferentes grados de pureza, que se colocarán en los huesos de los maxilares debajo
@@ -93,7 +93,7 @@
             </div>
             <div class="col ">
                 <div class="card card border-light mb-3 ">
-                    <img src=" " class="card-img-top " alt="... ">
+                    <img src="/Img/periodoncia.jpg " class="card-img-top " alt="... " height="230">
                     <div class="card-body ">
                         <h5 class="card-title ">PERIODONCIA </h5>
                         <p class="card-text ">“Uno es lo que decide ser” Nuestras fases higiénicas (Limpiezas) y tratamientos (modificación de encías) de esta especialidad son realizados por profesionales especialistas en periodoncia. Son el primer paso para cuidar tu salud
@@ -112,7 +112,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 ">
             <div class="col ">
                 <div class="card card border-light mb-3 ">
-                    <img src=" " class="card-img-top " alt="... ">
+                    <img src="/Img/ortodoncia.jpg " class="card-img-top " alt="... " height="230">
                     <div class="card-body ">
                         <h5 class="card-title ">ORTODONCIA</h5>
                         <p class="card-text ">“Mover cuesta pensar” Nada puede estar dado al azar en los movimientos de los dientes. Por eso contamos con un equipo de especialistas que te ayudarán a decidir el tipo de brackets o caso que más se ajuste a tu necesidad. </p>
@@ -124,7 +124,7 @@
             </div>
             <div class="col ">
                 <div class="card card border-light mb-3 ">
-                    <img src=" " class="card-img-top " alt="... ">
+                    <img src="/Img/blanqueamiento-dental.jpg " class="card-img-top " alt="... " height="230">
                     <div class="card-body ">
                         <h5 class="card-title ">BLANQUEAMIENTO DENTAL</h5>
                         <p class="card-text ">“Me gusta el blanco en todo menos en los dientes” Aclaramos la tonalidad de los dientes causada por pigmentaciones o por manchas causadas por medicamentos, traumas dentales, alimentos y bebidas oscuras entre otros.
@@ -137,9 +137,9 @@
             </div>
             <div class="col ">
                 <div class="card card border-light mb-3 ">
-                    <img src=" " class="card-img-top " alt="... ">
+                    <img src="/Img/cirugia-bucal.jpg " class="card-img-top " alt="... " height="230">
                     <div class="card-body ">
-                        <h5 class="card-title ">CIRUJIA </h5>
+                        <h5 class="card-title ">CIRUGIA </h5>
                         <p class="card-text "> “Modificar formas y función para una estética Ideal” Se encarga de la prevención, diagnóstico, tratamiento y rehabilitación quirúrgica de las enfermedades, lesiones y defectos de los tejidos blandos y duros de la cavidad oral,
                             maxilar superior, maxilar inferior y la cara.
                         </p>
@@ -157,7 +157,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 ">
             <div class="col ">
                 <div class="card card border-light mb-3 ">
-                    <img src=" " class="card-img-top " alt="... ">
+                    <img src="/Img/odontopediatria.jpg " class="card-img-top " alt="... " height="230">
                     <div class="card-body ">
                         <h5 class="card-title "> ODONTOPEDEDIATRIA </h5>
                         <p class="card-text "> “Modificar formas y función para una estética Ideal” Cuidado oral primario, preventivo y terapéutico de tus hijos (Hasta los 12 años) Odontopediatría, Ortopedia Maxilar y Ortodoncia
@@ -170,7 +170,7 @@
             </div>
             <div class="col ">
                 <div class="card card border-light mb-3 ">
-                    <img src=" " class="card-img-top " alt="... ">
+                    <img src="/Img/protesis.jpg " class="card-img-top " alt="... " height="230">
                     <div class="card-body ">
                         <h5 class="card-title "> PROTESIS DENTAL</h5>
                         <p class="card-text ">“Modificar formas y función para una estética Ideal” Hace parte de Rehabilitación Oral de tu sonrisa. Son tratamientos estéticos y funcionales que te ayudarán a recuperar la forma, ángulos, colores y longitud de tus dientes, de
@@ -184,10 +184,10 @@
             </div>
             <div class="col ">
                 <div class="card card border-light mb-3 ">
-                    <img src=" " class="card-img-top " alt="... ">
+                    <img src="/Img/otodoncia-invisible.jpg " class="card-img-top " alt="... " height="230">
                     <div class="card-body ">
-                        <h5 class="card-title "> </h5>
-                        <p class="card-text "> </p>
+                        <h5 class="card-title "> ORTODONCIA INVISIBLE </h5>
+                        <p class="card-text "> La ortodoncia modifica la posición de las piezas dentales, pero a veces, los brackets convencionales pueden resultar molestos o no gustar estéticamente. Por ello esta opción es adecuada para realizar las mejorias sin cambios aparentes en nuestra apariencia fisica. </p>
                         <div class="card-footer ">
                             <small class="text-muted e "> </small>
                         </div>
