--- a/Html/comentarios.html
+++ b/Html/comentarios.html
@@ -188,7 +188,7 @@
     </div>
     <!--Testimonios-->
     <!--Footer-->
-    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center" style="background: rgb(150, 150, 150, 0.7)">
+    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center">
         <div id="bg-contactos" class="position-absolute">
             <div class="w-100  ">
                 <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
