--- a/Html/sedes.html
+++ b/Html/sedes.html
@@ -78,7 +78,7 @@
 
             <div class="col-lg-5">
                 <div class="card p-3 card border-light mb-3" style="max-width: 70rem; ">
-                    <img class="card-img-top" src="/Img/sedecartagena.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="../Img/sedecartagena.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title "><i class="fas fa-location-arrow"></i> Sede Cartagena</h5>
                         <p class="card-text"><i class="fas fa-phone"></i> 7341777</p>
@@ -91,7 +91,8 @@
             </div>
         </div>
     </div>
-    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center" style="background: rgb(150, 150, 150, 0.7)">
+    <!--Footer-->
+    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center">
         <div id="bg-contactos" class="position-absolute">
             <div class="w-100  ">
                 <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
