--- a/Html/quienessomos.html
+++ b/Html/quienessomos.html
@@ -131,25 +131,25 @@
 
 
     </div>
-
-    <footer id="seccion-contacto " class="d-flex align-items-center justify-content-center" style="background: rgb(150, 150, 150, 0.7)">
-        <div id="bg-contactos" class="position-absolute">
-            <div class="w-100  ">
-                <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
-                <div id="iconos ">
-                    <a href="# "><i class="bi bi-facebook "><s></s></i></a>
-                    <a href="# "><i class="bi bi-twitter "></i></a>
-                    <a href="# "><i class="bi bi-instagram "></i></a>
-                </div>
+<!--Footer-->
+<footer id="seccion-contacto " class="d-flex align-items-center justify-content-center">
+    <div id="bg-contactos" class="position-absolute">
+        <div class="w-100  ">
+            <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
+            <div id="iconos ">
+                <a href="# "><i class="bi bi-facebook "><s></s></i></a>
+                <a href="# "><i class="bi bi-twitter "></i></a>
+                <a href="# "><i class="bi bi-instagram "></i></a>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 1440 320 ">
-            <path fill="#1b2a4e " fill-opacity="1 " d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z ">
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 1440 320 ">
+        <path fill="#1b2a4e " fill-opacity="1 " d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z ">
 
-            </path>
-        </svg>
-    </footer>
-    <!--Footer-->
+        </path>
+    </svg>
+</footer>
+<!--Footer-->
 </body>
 
 </html>
