--- a/Html/servicios.html
+++ b/Html/servicios.html
@@ -48,9 +48,9 @@
             </div>
         </div>
     </nav>
-    <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light " id="box ">
+    <div class="mt-3 border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light " id="box ">
 
-        <section class=" text-center container ">
+        <section class="mt-1 text-center container">
             <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2 ">SERVICIOS QUE OFRECEMOS</h1>
         </section>
 
