--- a/Html/reserva.html
+++ b/Html/reserva.html
@@ -12,14 +12,12 @@
 
 <body>
     <!--Nav-->
-    <nav class="navbar navbar-expand-lg border navbar-light bg-light" id="menu">
+    <nav class="navbar navbar-expand-lg border navbar-light bg-light position-fixed w-100" style="top:0; z-index: 200;" id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="../Index.html">
                 <spam class="text-primary fs-5 fw-bold ">Sonrisas <i class="fas fa-tooth"></i></spam>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -29,30 +27,29 @@
                             <a class="nav-link active " aria-current="page " href="../Index.html">Inicio</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/servicios.html">Servicios</a>
+                            <a class="nav-link " href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/sedes.html">Sedes</a>
+                            <a class="nav-link " href="sedes.html">Sedes</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/quienessomos.html">Nosotros</a>
+                            <a class="nav-link " href="quienessomos.html">Nosotros</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/comentarios.html">Comentarios</a>
+                            <a class="nav-link " href="comentarios.html">Comentarios</a>
                         </li>
 
                     </ul>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2 " type="email " placeholder="Correo Electronico "
-                        aria-label="email ">
+                    <input class="form-control me-2 " type="email " placeholder="Correo Electronico " aria-label="email ">
                     <button class=" btn btn-primary btn-primary-outline-success " type="button "> ¡Contactanos!
                     </button>
                 </form>
             </div>
         </div>
     </nav>
-    <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light " id="box ">
+    <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light "  style="margin-top: 58px" id="box ">
 
 
         <div class=" texto1 col-md-5 p-lg-5 mx-auto my-5 ">
