--- a/Html/sedes.html
+++ b/Html/sedes.html
@@ -6,17 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/bootstrap.css">
-    <script type="text/javascript" src="../Js/bootstrap.js"></script>
+    <script type="text/javascript" src="../Js-boost/bootstrap.js"></script>
     <script src="https://kit.fontawesome.com/43e07837e8.js" crossorigin="anonymous"></script>
     <title>Nuestras Sedes</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg border navbar-light bg-light" id="menu">
+    <nav class="navbar navbar-expand-lg border navbar-light bg-light position-fixed w-100" style="top:0; z-index: 200;" id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="../Index.html">
-                <spam class="text-primary fs-5 fw-bold ">Sonrisas
-                    <i class="fas fa-tooth"></i></spam>
+                <spam class="text-primary fs-5 fw-bold ">Sonrisas <i class="fas fa-tooth"></i></spam>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,16 +27,16 @@
                             <a class="nav-link active " aria-current="page " href="../Index.html">Inicio</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/servicios.html">Servicios</a>
+                            <a class="nav-link " href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/sedes.html">Sedes</a>
+                            <a class="nav-link " href="sedes.html">Sedes</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/quienessomos.html">Nosotros</a>
+                            <a class="nav-link " href="quienessomos.html">Nosotros</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="../Html/comentarios.html">Comentarios</a>
+                            <a class="nav-link " href="comentarios.html">Comentarios</a>
                         </li>
 
                     </ul>
@@ -51,7 +50,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container"  style="margin-top: 58px">
         <section class="py-5 text-center container">
             <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2">SEDES</h1>
             <div class="card p-3 card border-light mb-3" style="max-width: 120rem; ">
