--- a/Html/hotel.html
+++ b/Html/hotel.html
@@ -40,9 +40,9 @@
 
                     </ul>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2 " type="email " placeholder="Correo Electronico " aria-label="email ">
-                    <button class=" btn btn-primary btn-primary-outline-success " type="button "> ¡Contactanos!
+                <form class="d-flex" id="navForm">
+                    <input id="navFeedBack" class="form-control me-2 " type="email" placeholder="Correo Electronico " aria-label="email" required>
+                    <button class=" btn btn-primary btn-primary-outline-success "> ¡Contactanos!
                     </button>
                 </form>
             </div>
@@ -176,4 +176,5 @@
     </footer>
 </body>
 
+<script src="Js/allPages.js"></script>
 </html>
