--- a/Html/servicios.html
+++ b/Html/servicios.html
@@ -41,9 +41,9 @@
 
                     </ul>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2 " type="email " placeholder="Correo Electronico " aria-label="email ">
-                    <button class=" btn btn-primary btn-primary-outline-success " type="button "> ¡Contactanos!
+                <form class="d-flex" id="navForm">
+                    <input id="navFeedBack" class="form-control me-2 " type="email" placeholder="Correo Electronico " aria-label="email" required>
+                    <button class=" btn btn-primary btn-primary-outline-success "> ¡Contactanos!
                     </button>
                 </form>
             </div>
@@ -235,6 +235,7 @@
     <!--Footer-->
 </body>
 
+<script src="Js/allPages.js"></script>
 </html>
 
 
