--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
                     </ul>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2 " type="email " placeholder="Correo Electronico " aria-label="email ">
-                    <button class=" btn btn-primary btn-primary-outline-success " type="button "> ¡Contactanos!
+                <form class="d-flex" id="navForm">
+                    <input id="navFeedBack" class="form-control me-2 " type="email" placeholder="Correo Electronico " aria-label="email" required>
+                    <button class=" btn btn-primary btn-primary-outline-success "> ¡Contactanos!
                     </button>
                 </form>
             </div>
@@ -227,7 +227,7 @@
     <!--Noticias-->
 
     <!--FORMULARIO-->
-    <div class="container border-top border-primary bg-primary mb-3 " style="max-width: 500px ">
+    <div class="container p-3 border-top border-primary bg-primary mb-3 " style="max-width: 500px ">
         <div class="text-center mb-4" id="titulo-formulario ">
             <div class="d-flex justify-content-center">
                 <img src="Img/Contactanos.jpg " alt=" " class="img-fluid rounded" style="max-width: 10rem ">
@@ -237,12 +237,12 @@
         </div>
         <form id="form" action="">
             <div class="mb-3 ">
-                <input name="email" type="email " class="form-control " id="email" placeholder="nombre@ejemplo.com" required>
+                <input name="email" type="email" class="form-control " id="email" placeholder="nombre@ejemplo.com" required>
             </div>
 
 
             <div class="mb-3 ">
-                <input name="nombre" type="input " class="form-control " id="nombre" placeholder="nombre " required>
+                <input name="nombre" type="text" class="form-control " id="nombre" placeholder="nombre" required>
             </div>
 
 
@@ -251,7 +251,7 @@
             </div>
 
             <div class="mb-3 ">
-                <textarea class="form-control " id="msj " rows="4 " required></textarea>
+                <textarea class="form-control " id="msj" rows="4 " required></textarea>
             </div>
 
             <div class="mb-3 d-flex justify-content-center">
@@ -273,7 +273,7 @@
         <div id="bg-contactos" class="position-absolute">
             <div>
                 <p class="fs-5 px-3 pt-3 text-secondary">Sonrisas.SA &copy; Todos Los Derechos Reservados 2021</p>
-                <div id="iconos " class="d-flex justify-content-evenly">
+                <div id="iconos" class="d-flex justify-content-evenly">
                     <a class="text-decoration-none" href="https://twitter.com/cabiver7w7">twitter
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-facebook" viewBox="0 0 16 16">
@@ -307,5 +307,7 @@
     </footer>
     <!--Footer-->
 </body>
+
+<script src="Js/allPages.js"></script>
 <script src="Js/index.js"></script>
 </html>
