--- a/Html/hotel.html
+++ b/Html/hotel.html
@@ -175,6 +175,5 @@
         </div>
     </footer>
 </body>
-
-<script src="Js/allPages.js"></script>
+<script src="../Js/allPages.js"></script>
 </html>
