--- a/Html/sedes.html
+++ b/Html/sedes.html
@@ -122,6 +122,5 @@
     </footer>
     <!--Footer-->
 </body>
-
-<script src="Js/allPages.js"></script>
+<script src="../Js/allPages.js"></script>
 </html>
