--- a/Html/servicios.html
+++ b/Html/servicios.html
@@ -234,46 +234,5 @@
     </footer>
     <!--Footer-->
 </body>
-
-<script src="Js/allPages.js"></script>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
+<script src="../Js/allPages.js"></script>
 </html>
