--- a/Html/comentarios.html
+++ b/Html/comentarios.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="../Css/bootstrap.css">
     <script type="text/javascript" src="../Js-boost/bootstrap.js"></script>
     <script src="https://kit.fontawesome.com/43e07837e8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../Css/comentarios/jokas.css">
+    
     <title>Comentarios</title>
 </head>
 
-<body>
+<body style="min-width: 520px;">
     <!--Nav-->
     <nav class="navbar navbar-expand-lg border navbar-light bg-light position-fixed w-100" style="top:0; z-index: 200;" id="menu">
         <div class="container-fluid">
@@ -138,6 +140,20 @@
             </div>
             <p class="mb-0">Terrie, Kate y yo queremos agradecer a Sonrisas por la fantástica atención que hemos recibido. </p>
         </div>
+
+        <div class="container_joker_chat">
+            <div class="">
+                <img src="../Img/el_JOKAS.png" alt="" width="80" height="80" />
+                <p class="">joker</p>
+                <div class="">
+                    <p class="">Mon Oct 7 2021</p>
+                </div>
+            </div>
+            
+            <p class="joker--mensaje">Terrie, Kate y yo queremos agradecer a Sonrisas por la fantástica atención que hemos recibido. </p>
+        </div>
+
+
     </div>
     </section>
     <!--Seccion de Comentarios-->
