--- a/Html/quienessomos.html
+++ b/Html/quienessomos.html
@@ -172,6 +172,5 @@
     </footer>
     <!--Footer-->
 </body>
-
-<script src="Js/allPages.js"></script>
+<script src="../Js/allPages.js"></script>
 </html>
