--- a/Html/reserva.html
+++ b/Html/reserva.html
@@ -163,6 +163,5 @@
     </footer>
     <!--Footer-->
 </body>
-
-<script src="Js/allPages.js"></script>
+<script src="../Js/allPages.js"></script>
 </html>
