--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </div>
 
             <div class="mb-3 ">
-                <textarea class="form-control " id="msj" rows="4 " required></textarea>
+                <textarea name="text" class="form-control " id="msj" rows="4 " required></textarea>
             </div>
 
             <div class="mb-3 d-flex justify-content-center">
