Tabla de agenda

--- a/index.html
+++ b/index.html
@@ -42,13 +42,17 @@
 
                     </ul>
                 </ul>
+
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     <i class="far fa-calendar-alt"></i>
-              </button>
+                    </button> >
+                <a class="btn btn-primary" href="Html/Tabla.html" role="button"><i class="fas fa-calendar-check"></i></a>
+
                 <form class="d-flex" id="navForm">
                     <input id="navFeedBack" class="form-control me-2 " type="email" placeholder="Correo Electronico " aria-label="email" required>
                     <button class=" btn btn-primary btn-primary-outline-success "> ¡Contactanos!
                     </button>
+
                 </form>
             </div>
         </div>
