--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/boost/bootstrap.css">
+  <script type="text/javascript" src="assets/js-boost/bootstrap.js"></script>
+  <script src="https://kit.fontawesome.com/43e07837e8.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
