--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular</title>
+  <title>Sonrisas</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/Img/Final.png">
   <link rel="stylesheet" href="assets/boost/bootstrap.css">
   <script type="text/javascript" src="assets/js-boost/bootstrap.js"></script>
   <script src="https://kit.fontawesome.com/43e07837e8.js" crossorigin="anonymous"></script>
