--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,14 @@
   <title>NgSonrisas</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:200,300,400,500,600,700" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/43e07837e8.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/x-icon" href="Img/Final.png">
+   
+  
 </head>
 <body>
   <app-root></app-root>
