--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgSonrisas</title>
+  <title>Sonrisas</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:200,300,400,500,600,700" rel="stylesheet">
   <script src="https://kit.fontawesome.com/43e07837e8.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/x-icon" href="Img/Final.png">
+  <link rel="icon" type="image/x-icon" href="assets/Img/Final.png">
    
   
 </head>
